Refit string update, remove some old strings

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -208,6 +208,10 @@ STR_CONCAT_4C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING}{}
 STR_CONCAT_5C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING} /{STRING}{}
 STR_CONCAT_6C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING} /{STRING} /{STRING}{}
 
+STR_CONCAT_2F	:{STRING}{BLACK}/{STRING}
+STR_CONCAT_3F	:{STRING}{BLACK}/{STRING}{BLACK}/{STRING}
+STR_CONCAT_4F	:{STRING}{BLACK}/{STRING}{BLACK}/{STRING}{BLACK}/{STRING}
+
 #################
 #PAXMAIL  REFITS#
 #################
@@ -474,6 +478,10 @@ STR_SUFFIX_HCC			:{WHITE} Hokkaido Coal Company
 STR_SUFFIX_OIGAWA		:{WHITE} Ōigawa Railway
 STR_SUFFIX_SEIBU		:{WHITE} Seibu Railway
 STR_SUFFIX_SAKHALIN		:{WHITE} Sakhalin Railway
+STR_SUFFIX_SAGANO		:{WHITE} Sagano Scenic Railway
+STR_SUFFIX_WATARASE 	:{WHITE} Watarase Keikoku
+STR_SUFFIX_KANSAI		:{WHITE} Kansai Freight Railway
+
 STR_SUFFIX_PRIVATE		:{WHITE} Various Private Operators
 
 STR_SUFFIX_NIPPON       :{WHITE} Nippon Express
@@ -493,31 +501,40 @@ STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
 
 STR_SUFFIX_EXP      :{GOLD}Experimental
 STR_SUFFIX_LOGO     :{GOLD}Large Logo
+STR_SUFFIX_RENEWAL  :{GOLD}Renewal
 
 STR_SUFFIX_STRIPE   :{GOLD}Stripe
 STR_SUFFIX_WHISKERS :{GOLD}Whiskers
 STR_SUFFIX_2TONE    :{GOLD}Two-Tone
 
-STR_SUFFIX_IMPERIAL      :{GOLD}"Imperial Train"{BLACK}
-STR_SUFFIX_EXPRESS       :{GOLD}"Express"{BLACK}
-STR_SUFFIX_YUYU          :{GOLD}"Yuyu Salon Okayama"{BLACK}
-STR_SUFFIX_EUROLINER     :{GOLD}"Euroliner"{BLACK}
-STR_SUFFIX_TOKKYU        :{GOLD}"Tokkyu"{BLACK}
-STR_SUFFIX_TOKAIDO       :{GOLD}"Tokaido"{BLACK}
-STR_SUFFIX_RAINBOW       :{GOLD}"Super Express Rainbow"{BLACK}
-STR_SUFFIX_TWILIGHT      :{GOLD}"Twilight Express"{BLACK}
-STR_SUFFIX_HOKUTOSEI     :{GOLD}"Hokutosei"{BLACK}
-STR_SUFFIX_CASSIOPEIA    :{GOLD}"Cassiopeia"{BLACK}
-STR_SUFFIX_AKEBONO       :{GOLD}"Akebono Orient Saloon"{BLACK}
-STR_SUFFIX_SOUTHERNCROSS :{GOLD}"Southern Cross"{BLACK}
-STR_SUFFIX_AMERICANTRAIN :{GOLD}"American Train"{BLACK}
-STR_SUFFIX_YASURAGI      :{GOLD}"Yasuragi"{BLACK}
+STR_SUFFIX_IMPERIAL      :{SILVER}"Imperial Train"{BLACK}
+STR_SUFFIX_EXPRESS       :{SILVER}"Express"{BLACK}
+STR_SUFFIX_YUYU          :{SILVER}"Yuyu Salon Okayama"{BLACK}
+STR_SUFFIX_EUROLINER     :{SILVER}"Euroliner"{BLACK}
+STR_SUFFIX_TOKKYU        :{SILVER}"Tokkyu"{BLACK}
+STR_SUFFIX_TOKAIDO       :{SILVER}"Tokaido"{BLACK}
+STR_SUFFIX_RAINBOW       :{SILVER}"Super Express Rainbow"{BLACK}
+STR_SUFFIX_TWILIGHT      :{SILVER}"Twilight Express"{BLACK}
+STR_SUFFIX_HOKUTOSEI     :{SILVER}"Hokutosei"{BLACK}
+STR_SUFFIX_CASSIOPEIA    :{SILVER}"Cassiopeia"{BLACK}
+STR_SUFFIX_AKEBONO       :{SILVER}"Akebono Orient Saloon"{BLACK}
+STR_SUFFIX_SOUTHERNCROSS :{SILVER}"Southern Cross"{BLACK}
+STR_SUFFIX_AMERICANTRAIN :{SILVER}"American Train"{BLACK}
+STR_SUFFIX_YASURAGI      :{SILVER}"Yasuragi"{BLACK}
+STR_SUFFIX_NOROKKO            :{SILVER}"Norokko"{BLACK}
+STR_SUFFIX_ISLANDEXPRESS      :{SILVER}"Island Express"{BLACK}
+STR_SUFFIX_NOSTALGICVIEW      :{SILVER}"Nostalgic View"{BLACK}
+STR_SUFFIX_OKUIZUMO           :{SILVER}"Okuizumo Orochi"{BLACK}
+STR_SUFFIX_KINOKUNI           :{SILVER}"Kinokuni Seaside"{BLACK}
 
-STR_SUFFIX_PANDA         :{GOLD}"Panda"{BLACK}
-STR_SUFFIX_MOMOTARO      :{GOLD}"Momotaro"{BLACK}
-STR_SUFFIX_KINTARO       :{GOLD}"Kintaro"{BLACK}
-STR_SUFFIX_REDTHUNDER    :{GOLD}"Red Thunder"{BLACK}
-STR_SUFFIX_HAMAMATSU      :{GOLD}"Hamamatsu Depot"{BLACK}
+
+STR_SUFFIX_JNR_RETRO     :{SILVER}"JNR"{BLACK}
+STR_SUFFIX_PANDA         :{SILVER}"Panda"{BLACK}
+STR_SUFFIX_MOMOTARO      :{SILVER}"Momotaro"{BLACK}
+STR_SUFFIX_KINTARO       :{SILVER}"Kintaro"{BLACK}
+STR_SUFFIX_REDTHUNDER    :{SILVER}"Red Thunder"{BLACK}
+STR_SUFFIX_HAMAMATSU      :{SILVER}"Hamamatsu Depot"{BLACK}
+STR_SUFFIX_NAEBO          :{SILVER}"Naebo Depot"{BLACK}
 
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
@@ -544,16 +561,44 @@ STR_SUFFIX_REFURB	:{SILVER}(Refurbished)
 STR_SUFFIX_NOLOGO   :{SILVER}(No Logo)
 STR_SUFFIX_SEMIFIC  :{SILVER}(Semi-Fictional)
 STR_SUFFIX_FICTION  :{SILVER}(Fictional)
+STR_SUFFIX_EXPERIMENT  :{SILVER}(Experimental)
 
 #################
-#COLOUR SUFFIXES#
+#MODULAR COLOUR SUFFIXES#
 #################
+STR_COLOUR_WHITE			:{WHITE}White
+STR_COLOUR_BLACK			:{BLACK}Black
+STR_COLOUR_GOLD 			:{GOLD}Gold
+STR_COLOUR_SILVER			:{SILVER}Silver
+STR_COLOUR_GREY			    :{SILVER}Grey
+STR_COLOUR_GREEN			:{GREEN}Green
+STR_COLOUR_BROWN			:{BROWN}Brown
+STR_COLOUR_BLUE				:{BLUE}Blue
+STR_COLOUR_LTBLUE			:{LTBLUE}Light Blue
+STR_COLOUR_RED				:{RED}Red
+STR_COLOUR_ORANGE			:{ORANGE}Orange
+STR_COLOUR_PINK 			:{CREAM}Pink
+STR_COLOUR_CREAM			:{LTBROWN}Cream
+STR_COLOUR_YELLOW			:{YELLOW}Yellow
+
+
+#################
+#OLD COLOUR SUFFIXES#
+#################
+
 STR_SUFFIX_WHITE			:{WHITE}White
 STR_SUFFIX_BLACK			:{BLACK}Black
-STR_SUFFIX_BLACK_YELLOW		:{BLACK}Black/Yellow
 STR_SUFFIX_SILVER			:{SILVER}Silver
 STR_SUFFIX_GREEN			:{GREEN}Green
 STR_SUFFIX_BROWN			:{BROWN}Brown
+STR_SUFFIX_BLUE				:{BLUE}Blue
+STR_SUFFIX_RED				:{RED}Red
+STR_SUFFIX_ORANGE			:{ORANGE}Orange
+STR_SUFFIX_PINK 			:{CREAM}Pink
+
+
+
+STR_SUFFIX_BLACK_YELLOW		:{BLACK}Black/Yellow
 STR_SUFFIX_BROWN_BLUE		:{BROWN}Brown/Blue
 STR_SUFFIX_BROWN_RED		:{BROWN}Brown/Red
 STR_SUFFIX_BROWN_CREAM		:{BROWN}Brown/Cream
@@ -561,7 +606,7 @@ STR_SUFFIX_BROWN_GREEN		:{BROWN}Brown/Green
 STR_SUFFIX_BROWN_YELLOW		:{BROWN}Brown/Yellow
 STR_SUFFIX_BROWN_GOLD		:{BROWN}Brown/Gold
 STR_SUFFIX_BROWN_SILVER		:{BROWN}Brown/Silver
-STR_SUFFIX_BLUE				:{BLUE}Blue
+
 STR_SUFFIX_BLUE_GREEN		:{BLUE}Blue/Green
 STR_SUFFIX_BLUE_GOLD		:{BLUE}Blue/Gold
 STR_SUFFIX_BLUE_WHITE		:{BLUE}Blue/White
@@ -569,15 +614,15 @@ STR_SUFFIX_BLUE_GREY		:{BLUE}Blue/Grey
 STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
 STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
 STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
-STR_SUFFIX_RED				:{RED}Red
+
 STR_SUFFIX_RED_GOLD			:{RED}Red/Gold
 STR_SUFFIX_RED_SILVER		:{RED}Red/Silver
 STR_SUFFIX_RED_WHITE		:{RED}Red/White
 STR_SUFFIX_RED_GREY  		:{RED}Red/Grey
 STR_SUFFIX_RED_CREAM		:{RED}Red/Cream
 STR_SUFFIX_RED_BLACK        :{RED}Red/Black
-STR_SUFFIX_ORANGE			:{ORANGE}Orange
-STR_SUFFIX_PINK 			:{CREAM}Rose Pink
+
+
 STR_SUFFIX_RED_WHITE_BLUE   :{RED}Red/{WHITE}White/{BLUE}Blue
 STR_SUFFIX_CC				:{GREEN}Company Coloured
 
@@ -661,31 +706,14 @@ STR_REFIT_OLDRED	: {WHITE}JNR{BLACK} Classic Red
 STR_REFIT_OLDSTRIPE	: {WHITE}JNR{BLACK} Classic Red with Stripe
 STR_REFIT_BLUE_AC	: {WHITE}JNR{BLACK} Blue with A/C
 
-STR_REFIT_RAINBOW		: {WHITE}JR East{BLACK} {GOLD}"Super Express Rainbow"{BLACK}
-STR_REFIT_TWILIGHT	: {WHITE}JR West{BLACK} {GOLD}"Twilight Express"{BLACK}
-STR_REFIT_STAINLESS	: {WHITE}JNR{BLACK} Stainless Steel
-STR_REFIT_MOMOTARO	: {WHITE}JR Freight{BLACK} {GOLD}"Momotaro"{BLACK}
-STR_REFIT_HOKUTOSEI		: {WHITE}JR East{BLACK} {GOLD}"Hokutosei"{BLACK}
-STR_REFIT_CASSIOPEIA	: {WHITE}JR East{BLACK} {GOLD}"Cassiopeia"{BLACK}
-STR_REFIT_JRF_2TONE		: {WHITE}JR Freight{BLACK} Two-Tone Blue
-STR_REFIT_TOKAIDO_GREEN	: {WHITE}JNR{BLACK} Green/Yellow {GOLD}"Tokaido"{BLACK}
-STR_REFIT_JNR_CREAM		: {WHITE}JNR{BLACK} Cream/Red
-STR_REFIT_SOUTHERNCROSS	: {WHITE}JR Kyushu{BLACK} Red/White {GOLD}"Southern Cross"{BLACK}
-STR_REFIT_OKUIZUMO		: {WHITE}JR West{BLACK} Blue/White {GOLD}"Okuizumo Orochi"{BLACK}
-STR_REFIT_NOSTALGICVIEW	: {WHITE}JR East{BLACK} Yellow/Brown {GOLD}"Nostalgic View"{BLACK}
-STR_REFIT_ISLANDEXPRESS	: {WHITE}JR Shikoku{BLACK} White/Blue {GOLD}"Island Express"{BLACK}
-STR_REFIT_KINOKUNI		: {WHITE}JR West{BLACK} Blue/Orange {GOLD}"Kinokuni Seaside"{BLACK}
-STR_REFIT_HOKKAIDO_BLACK		: {WHITE}JR Hokkaido{BLACK} Black
-STR_REFIT_HOKKAIDO_HET			: {WHITE}JR Hokkaido{BLACK} Blue/Yellow {GOLD}"Naebo Works"{BLACK}
-STR_REFIT_NOROKKO				: {WHITE}JR Hokkaido{BLACK} Green/Gold {GOLD}"Norokko"{BLACK}
-STR_REFIT_KYUSHU_RED	: {WHITE}JR Kyushu{BLACK} Black/Red
-STR_REFIT_KYUSHU_YELLOW	: {WHITE}JR Kyushu{BLACK} Black/Yellow
 
 
-STR_REFIT_WATARASE		: {WHITE}Watarase Keikoku{BLACK} Maroon/Gold
-STR_REFIT_KANSAI_BROWN	: {WHITE}Kansai Freight Railway{BLACK} Brown/Red
-STR_REFIT_KANSAI_BLUE	: {WHITE}Kansai Freight Railway{BLACK} Blue/Yellow
-STR_REFIT_SAGANO		: {WHITE}Sagano Scenic Railway{BLACK} Black/Red
+
+
+
+
+
+# DD13 liveries v
 
 STR_REFIT_ASAHIKAWA		: {WHITE}Asahikawa Express Railway{BLACK} Green/White
 STR_REFIT_AKITA_RINKAI	: {WHITE}Akita Rinkai Railway{BLACK} Blue/White
@@ -700,41 +728,7 @@ STR_REFIT_DD51_EXP2	: {WHITE}JR Freight {BLACK}Experimental Blue/White
 STR_REFIT_DD51_EXP3	: {WHITE}JR Freight {BLACK}Experimental Blue/Cream
 
 
-STR_REFIT_EF81_450		: EF81-450 Modern Headlights
 
-STR_REFIT_EF30_STRIPE	: Stainless with Red Stripe
-
-STR_REFIT_ED76_1000		: ED76-1000 JR Freight Refurbished
-STR_REFIT_ED76_500		: ED76-500 JR Hokkaido
-STR_REFIT_ED76_550		: ED76-550 Seikan Tunnel Version
-
-STR_REFIT_EF59			: EF59 Banker
-
-STR_REFIT_EF66_100		: EF66-100 
-
-
-STR_REFIT_EF210_300		: EF210-300 Banker
-
-STR_REFIT_EF510_RED		: {WHITE}JR Freight {GOLD}"Red Thunder"
-STR_REFIT_EF510_300		: {SILVER}EF510-300 {WHITE}JR Freight {BLACK}Silver
-
-STR_REFIT_DF200_NEW		: {WHITE}JR Freight {GOLD}"Red Bear"
-STR_REFIT_DF200_SS		: {WHITE}JR Kyushu {GOLD}"Seven Stars"
-
-STR_REFIT_EH500_1	: EH500 Early version (Low Headlights)
-STR_REFIT_EH500_2	: EH500 Early version "Kintaro Eco-Power"
-STR_REFIT_EH500_3	: EH500 Late Version "Kintaro Eco-Power"
-STR_REFIT_EH500_4	: EH500 Late Version, No Logo 
-
-
-STR_REFIT_DEKI_400	:{SILVER}DEKI 400
-STR_REFIT_EL120		:{SILVER}EL120
-
-STR_REFIT_WAKI_STRIPE	: Orange Stripe "Express Service"
-STR_REFIT_WAKI_GREENSTRIPE : Brown with Green Stripe
-
-STR_REFIT_KU_NISSAN			: JRF Red/White/Blue "Nissan"
-STR_REFIT_KU_REDBLUE		: JRF Red/Blue
 
 STR_REFIT_DMT_PROTO		: DMT Prototype
 STR_REFIT_DMT_SAGAWA	: Sagawa
@@ -828,3 +822,16 @@ STR_DESC_BRAKE		:{BLACK}Usage: {SILVER}Brake Van - {GREEN}Attach behind slower f
 
 STR_DESC_BRAKE_NA	:{BLACK}Brake Van Speed Boost: {RED}Not Available{}
 
+# ####################
+# OUTDATED STRINGS   #
+# ####################
+
+STR_REFIT_DF200_NEW		: {WHITE}JR Freight {GOLD}"Red Bear"
+STR_REFIT_DF200_SS		: {WHITE}JR Kyushu {GOLD}"Seven Stars"
+
+
+STR_REFIT_WAKI_STRIPE	: Orange Stripe "Express Service"
+STR_REFIT_WAKI_GREENSTRIPE : Brown with Green Stripe
+
+STR_REFIT_KU_NISSAN			: JRF Red/White/Blue "Nissan"
+STR_REFIT_KU_REDBLUE		: JRF Red/Blue
