--- a/lang/english.lng
+++ b/lang/english.lng
@@ -50,6 +50,7 @@ STR_NAME_ED19	:ED19
 STR_NAME_ED50	:ED50 
 STR_NAME_ED53	:ED53 
 STR_NAME_ED54	:ED54 
+STR_NAME_ED55	:ED55
 
 STR_NAME_EF10	:EF10 
 STR_NAME_EF10_1	:EF10 Old type 
