Modular livery strings update

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -209,9 +209,10 @@ STR_CONCAT_4C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING}{}
 STR_CONCAT_5C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING} /{STRING}{}
 STR_CONCAT_6C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING} /{STRING} /{STRING}{}
 
-STR_CONCAT_2F	:{STRING}{BLACK}/{STRING}
-STR_CONCAT_3F	:{STRING}{BLACK}/{STRING}{BLACK}/{STRING}
-STR_CONCAT_4F	:{STRING}{BLACK}/{STRING}{BLACK}/{STRING}{BLACK}/{STRING}
+STR_CONCAT_1F	:{BLACK} - {STRING}
+STR_CONCAT_2F	:{BLACK} - {STRING}{BLACK} / {STRING}
+STR_CONCAT_3F	:{BLACK} - {STRING}{BLACK} / {STRING}{BLACK} / {STRING}
+STR_CONCAT_4F	:{BLACK} - {STRING}{BLACK} / {STRING}{BLACK} / {STRING}{BLACK} / {STRING}
 
 #################
 #PAXMAIL  REFITS#
@@ -507,42 +508,30 @@ STR_SUFFIX_AMTRAK       :{WHITE} Amtrak
 STR_SUFFIX_YEARDEP	:{GREEN}Year-Dependent{BLACK}
 STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
 
-STR_SUFFIX_EXP      :{GOLD}Experimental
-STR_SUFFIX_LOGO     :{GOLD}Large Logo
-STR_SUFFIX_RENEWAL  :{GOLD}Renewal
-
-STR_SUFFIX_STRIPE   :{GOLD}Stripe
-STR_SUFFIX_WHISKERS :{GOLD}Whiskers
-STR_SUFFIX_2TONE    :{GOLD}Two-Tone
-
-STR_SUFFIX_IMPERIAL      :{SILVER}"Imperial Train"{BLACK}
-STR_SUFFIX_EXPRESS       :{SILVER}"Express"{BLACK}
-STR_SUFFIX_YUYU          :{SILVER}"Yuyu Salon Okayama"{BLACK}
-STR_SUFFIX_EUROLINER     :{SILVER}"Euroliner"{BLACK}
-STR_SUFFIX_TOKKYU        :{SILVER}"Tokkyu"{BLACK}
-STR_SUFFIX_TOKAIDO       :{SILVER}"Tokaido"{BLACK}
-STR_SUFFIX_RAINBOW       :{SILVER}"Super Express Rainbow"{BLACK}
-STR_SUFFIX_TWILIGHT      :{SILVER}"Twilight Express"{BLACK}
-STR_SUFFIX_HOKUTOSEI     :{SILVER}"Hokutosei"{BLACK}
-STR_SUFFIX_CASSIOPEIA    :{SILVER}"Cassiopeia"{BLACK}
-STR_SUFFIX_AKEBONO       :{SILVER}"Akebono Orient Saloon"{BLACK}
-STR_SUFFIX_SOUTHERNCROSS :{SILVER}"Southern Cross"{BLACK}
-STR_SUFFIX_AMERICANTRAIN :{SILVER}"American Train"{BLACK}
-STR_SUFFIX_YASURAGI      :{SILVER}"Yasuragi"{BLACK}
-STR_SUFFIX_NOROKKO            :{SILVER}"Norokko"{BLACK}
-STR_SUFFIX_ISLANDEXPRESS      :{SILVER}"Island Express"{BLACK}
-STR_SUFFIX_NOSTALGICVIEW      :{SILVER}"Nostalgic View"{BLACK}
-STR_SUFFIX_OKUIZUMO           :{SILVER}"Okuizumo Orochi"{BLACK}
-STR_SUFFIX_KINOKUNI           :{SILVER}"Kinokuni Seaside"{BLACK}
 
 
-STR_SUFFIX_JNR_RETRO     :{SILVER}"JNR"{BLACK}
-STR_SUFFIX_PANDA         :{SILVER}"Panda"{BLACK}
-STR_SUFFIX_MOMOTARO      :{SILVER}"Momotaro"{BLACK}
-STR_SUFFIX_KINTARO       :{SILVER}"Kintaro"{BLACK}
-STR_SUFFIX_REDTHUNDER    :{SILVER}"Red Thunder"{BLACK}
-STR_SUFFIX_HAMAMATSU      :{SILVER}"Hamamatsu Depot"{BLACK}
-STR_SUFFIX_NAEBO          :{SILVER}"Naebo Depot"{BLACK}
+STR_SUFFIX_IMPERIAL      :{GOLD}"Imperial Train"{BLACK}
+STR_SUFFIX_EXPRESS       :{GOLD}"Express"{BLACK}
+STR_SUFFIX_YUYU          :{GOLD}"Yuyu Salon Okayama"{BLACK}
+STR_SUFFIX_EUROLINER     :{GOLD}"Euroliner"{BLACK}
+STR_SUFFIX_TOKKYU        :{GOLD}"Tokkyu"{BLACK}
+STR_SUFFIX_TOKAIDO       :{GOLD}"Tokaido"{BLACK}
+STR_SUFFIX_RAINBOW       :{GOLD}"Super Express Rainbow"{BLACK}
+STR_SUFFIX_TWILIGHT      :{GOLD}"Twilight Express"{BLACK}
+STR_SUFFIX_HOKUTOSEI     :{GOLD}"Hokutosei"{BLACK}
+STR_SUFFIX_CASSIOPEIA    :{GOLD}"Cassiopeia"{BLACK}
+STR_SUFFIX_AKEBONO       :{GOLD}"Akebono Orient Saloon"{BLACK}
+STR_SUFFIX_SOUTHERNCROSS :{GOLD}"Southern Cross"{BLACK}
+STR_SUFFIX_AMERICANTRAIN :{GOLD}"American Train"{BLACK}
+STR_SUFFIX_YASURAGI      :{GOLD}"Yasuragi"{BLACK}
+STR_SUFFIX_7STARS        :{GOLD}"Seven Stars in Kyushu"{BLACK}
+STR_SUFFIX_NOROKKO            :{GOLD}"Norokko"{BLACK}
+STR_SUFFIX_ISLANDEXPRESS      :{GOLD}"Island Express"{BLACK}
+STR_SUFFIX_NOSTALGICVIEW      :{GOLD}"Nostalgic View"{BLACK}
+STR_SUFFIX_OKUIZUMO           :{GOLD}"Okuizumo Orochi"{BLACK}
+STR_SUFFIX_KINOKUNI           :{GOLD}"Kinokuni Seaside"{BLACK}
+
+
 
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
@@ -557,19 +546,38 @@ STR_REFIT_RANDYEAR	: {GREEN}Random, Year-Dependent{BLACK}
 
 STR_REFIT_YEARFORM	: {GREEN}Auto-Formation, Year-Dependent{BLACK}
 
-STR_SUFFIX_AIRCON	:{SILVER}(Air Conditioned)
-STR_SUFFIX_ORIGINAL	:{SILVER}(Original)
-STR_SUFFIX_PROTO	:{SILVER}(Prototype)
-STR_SUFFIX_PANTOS	:{SILVER}(New Pantographs)
-STR_SUFFIX_LIGHTS	:{SILVER}(New Headlights)
-STR_SUFFIX_UPGRADE	:{SILVER}(Upgraded)
-STR_SUFFIX_OLDSHAPE	:{SILVER}(Old Shape)
-STR_SUFFIX_NEWSHAPE	:{SILVER}(New Shape)
-STR_SUFFIX_REFURB	:{SILVER}(Refurbished)
-STR_SUFFIX_NOLOGO   :{SILVER}(No Logo)
-STR_SUFFIX_SEMIFIC  :{SILVER}(Semi-Fictional)
-STR_SUFFIX_FICTION  :{SILVER}(Fictional)
-STR_SUFFIX_EXPERIMENT  :{SILVER}(Experimental)
+STR_SUFFIX_AIRCON	:{BLACK}(Air Conditioned)
+STR_SUFFIX_ORIGINAL	:{BLACK}(Original)
+STR_SUFFIX_PROTO	:{BLACK}(Prototype)
+STR_SUFFIX_PANTOS	:{BLACK}(New Pantographs)
+STR_SUFFIX_LIGHTS	:{BLACK}(New Headlights)
+STR_SUFFIX_UPGRADE	:{BLACK}(Upgraded)
+STR_SUFFIX_OLDSHAPE	:{BLACK}(Old Shape)
+STR_SUFFIX_NEWSHAPE	:{BLACK}(New Shape)
+STR_SUFFIX_REFURB	:{BLACK}(Refurbished)
+STR_SUFFIX_NOLOGO   :{BLACK}(No Logo)
+STR_SUFFIX_LARGELOGO    :{BLACK}(Large Logo)
+STR_SUFFIX_STRIPE       :{BLACK}(Stripe)
+STR_SUFFIX_WHISKERS     :{BLACK}(Whiskers)
+STR_SUFFIX_2TONE        :{BLACK}(Two-Tone)
+STR_SUFFIX_SEMIFIC      :{BLACK}(Semi-Fictional)
+STR_SUFFIX_FICTION      :{BLACK}(Fictional)
+STR_SUFFIX_PROPOSAL     :{BLACK}(Proposed - Never Built)
+STR_SUFFIX_EXPERIMENT   :{BLACK}(Experimental)
+STR_SUFFIX_BANKER       :{BLACK}(Banker Conversion)
+
+STR_SUFFIX_JNR_RETRO     :{BLACK}(JNR Retro){BLACK}
+STR_SUFFIX_PANDA         :{BLACK}(Panda){BLACK}
+STR_SUFFIX_MOMOTARO      :{BLACK}(Momotaro){BLACK}
+STR_SUFFIX_KINTARO       :{BLACK}(Kintaro){BLACK}
+STR_SUFFIX_REDTHUNDER    :{BLACK}(Red Thunder){BLACK}
+STR_SUFFIX_BLUETHUNDER    :{BLACK}(Blue Thunder){BLACK}
+STR_SUFFIX_REDBEAR    :{BLACK}(Red Bear){BLACK}
+STR_SUFFIX_HAMAMATSU     :{BLACK}(Hamamatsu Depot){BLACK}
+STR_SUFFIX_NAEBO         :{BLACK}(Naebo Depot){BLACK}
+STR_SUFFIX_LOGO          :{SILVER}(Logo){BLACK}
+
+STR_SUFFIX_EXP :OBSOLETE
 
 #################
 #MODULAR COLOUR SUFFIXES#
@@ -579,11 +587,11 @@ STR_COLOUR_BLACK			:{BLACK}Black
 STR_COLOUR_GOLD 			:{GOLD}Gold
 STR_COLOUR_SILVER			:{SILVER}Silver
 STR_COLOUR_GREY			    :{SILVER}Grey
-STR_COLOUR_LTGREEN			:{GREEN}Green
-STR_COLOUR_GREEN			:{DKGREEN}Green
+STR_COLOUR_LTGREEN			:{DKGREEN}Light Green
+STR_COLOUR_GREEN			:{GREEN}Green
 STR_COLOUR_BROWN			:{BROWN}Brown
 STR_COLOUR_BLUE				:{BLUE}Blue
-STR_COLOUR_LTBLUE			:{LTBLUE}Blue
+STR_COLOUR_LTBLUE			:{LTBLUE}Light Blue
 STR_COLOUR_RED				:{RED}Red
 STR_COLOUR_ORANGE			:{ORANGE}Orange
 STR_COLOUR_PINK 			:{CREAM}Pink
@@ -678,7 +686,6 @@ STR_REFIT_FWHITE	:, White
 STR_REFIT_FLOGO		:, Logo
 
 STR_REFIT_HCC		: {WHITE}Hokkaido Coal Company{BLACK}
-STR_REFIT_SEIBU		: {WHITE}Seibu Railway{BLACK} Red/Cream
 STR_REFIT_OIGAWA    : {WHITE}Oigawa Railway{GREEN} Green
 
 STR_REFIT_JGR		: {WHITE}JGR{BLACK} Brown
