freight wagon string cleanup

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -598,24 +598,18 @@ STR_COLOUR_PINK 			:{CREAM}Pink
 STR_COLOUR_CREAM			:{LTBROWN}Cream
 STR_COLOUR_YELLOW			:{YELLOW}Yellow
 
+STR_SUFFIX_CC				:{GREEN}Company Coloured
 
 #################
 #OLD COLOUR SUFFIXES#
+#now only used by coaches
 #################
 
-STR_SUFFIX_WHITE			:{WHITE}White
-STR_SUFFIX_BLACK			:{BLACK}Black
-STR_SUFFIX_SILVER			:{SILVER}Silver
-STR_SUFFIX_GREEN			:{GREEN}Green
+
 STR_SUFFIX_BROWN			:{BROWN}Brown
 STR_SUFFIX_BLUE				:{BLUE}Blue
 STR_SUFFIX_RED				:{RED}Red
-STR_SUFFIX_ORANGE			:{ORANGE}Orange
-STR_SUFFIX_PINK 			:{CREAM}Pink
 
-
-
-STR_SUFFIX_BLACK_YELLOW		:{BLACK}Black/Yellow
 STR_SUFFIX_BROWN_BLUE		:{BROWN}Brown/Blue
 STR_SUFFIX_BROWN_RED		:{BROWN}Brown/Red
 STR_SUFFIX_BROWN_CREAM		:{BROWN}Brown/Cream
@@ -632,16 +626,7 @@ STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
 STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
 STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
 
-STR_SUFFIX_RED_GOLD			:{RED}Red/Gold
-STR_SUFFIX_RED_SILVER		:{RED}Red/Silver
-STR_SUFFIX_RED_WHITE		:{RED}Red/White
-STR_SUFFIX_RED_GREY  		:{RED}Red/Grey
-STR_SUFFIX_RED_CREAM		:{RED}Red/Cream
-STR_SUFFIX_RED_BLACK        :{RED}Red/Black
 
-
-STR_SUFFIX_RED_WHITE_BLUE   :{RED}Red/{WHITE}White/{BLUE}Blue
-STR_SUFFIX_CC				:{GREEN}Company Coloured
 
 
 #####################
@@ -684,45 +669,6 @@ STR_REFIT_FCOVER	:, Covered
 STR_REFIT_FCREAM	:, Cream
 STR_REFIT_FWHITE	:, White
 STR_REFIT_FLOGO		:, Logo
-
-STR_REFIT_HCC		: {WHITE}Hokkaido Coal Company{BLACK}
-STR_REFIT_OIGAWA    : {WHITE}Oigawa Railway{GREEN} Green
-
-STR_REFIT_JGR		: {WHITE}JGR{BLACK} Brown
-STR_REFIT_JGR_BLACK	: {WHITE}JGR{BLACK} Black
-STR_REFIT_JGR_GREEN	: {WHITE}JGR{BLACK} Green
-STR_REFIT_JGR_IMPERIAL  : {WHITE}JGR{BLACK} Imperial Train{GOLD} Brown/Gold
-
-STR_REFIT_JNR_BROWN	    : {WHITE}JNR{BLACK} Brown
-STR_REFIT_JNR_YELLOW	: {WHITE}JNR{BLACK} Brown/Yellow
-STR_REFIT_RED		: {WHITE}JNR{BLACK} Red
-STR_REFIT_PINK		: {WHITE}JNR{BLACK} Rose Pink
-STR_REFIT_BLUE		: {WHITE}JNR{BLACK} Blue
-STR_REFIT_BLACK		: {WHITE}JNR{BLACK} Black
-STR_REFIT_GREEN		: {WHITE}JNR{BLACK} Light Green
-STR_REFIT_TOKKYU	: {WHITE}JNR{BLACK} Blue/Cream {GOLD}"Tokkyu"{BLACK}
-STR_REFIT_JNR_LOGO	: {WHITE}JNR{BLACK} Large Logo
-STR_REFIT_JRF_RED	: {WHITE}JR Freight{BLACK} Red
-STR_REFIT_JRF_BLUE	: {WHITE}JR Freight{BLACK} Blue
-STR_REFIT_JRF_REFIT	: {WHITE}JR Freight{BLACK} Blue/White
-STR_REFIT_JRF_NLOGO	: {WHITE}JR Freight{BLACK} No Logo
-STR_REFIT_SILVER	: {WHITE}JR Freight{BLACK} Silver
-STR_REFIT_JRF_YELLOW	: {WHITE}JR Freight{BLACK} Red/Yellow
-STR_REFIT_JRF_PINK		: {WHITE}JR Freight{BLACK} Pink/Orange
-STR_REFIT_JRF_THICK		: {WHITE}JR Freight{BLACK} Red/White/Grey
-STR_REFIT_JRF_REDBLUE	: {WHITE}JR Freight{BLACK} Red/Blue
-STR_REFIT_HOKBLUE	: {WHITE}JR Hokkaido{BLACK} {GOLD}"Hokutosei"{BLACK}
-STR_REFIT_HOKRED	: {WHITE}JR Freight{BLACK} Hokkaido
-STR_REFIT_EUROLINER	: {WHITE}JR Central{BLACK} {GOLD}"Euroliner"{BLACK}
-STR_REFIT_LOGO		: {WHITE}JR Freight{BLACK} Large Logo
-STR_REFIT_JR_LOGO	: {WHITE}JR Freight{BLACK} Large Logo
-STR_REFIT_EXP		: {WHITE}JR Freight{BLACK} Experimental
-STR_REFIT_PROTOTYPE	: {WHITE}JR Freight{BLACK} Prototype
-STR_REFIT_OLDRED	: {WHITE}JNR{BLACK} Classic Red
-STR_REFIT_OLDSTRIPE	: {WHITE}JNR{BLACK} Classic Red with Stripe
-STR_REFIT_BLUE_AC	: {WHITE}JNR{BLACK} Blue with A/C
-
-
 
 
 # ####################
@@ -826,12 +772,3 @@ STR_DESC_BRAKE_NA	:{BLACK}Brake Van Speed Boost: {RED}Not Available{}
 # OUTDATED STRINGS   #
 # ####################
 
-STR_REFIT_DF200_NEW		: {WHITE}JR Freight {GOLD}"Red Bear"
-STR_REFIT_DF200_SS		: {WHITE}JR Kyushu {GOLD}"Seven Stars"
-
-
-STR_REFIT_WAKI_STRIPE	: Orange Stripe "Express Service"
-STR_REFIT_WAKI_GREENSTRIPE : Brown with Green Stripe
-
-STR_REFIT_KU_NISSAN			: JRF Red/White/Blue "Nissan"
-STR_REFIT_KU_REDBLUE		: JRF Red/Blue
