freight wagon string cleanup

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -182,7 +182,7 @@ STR_NAME_MAIL_HONI_8900	:HONI 8900 Luggage Van
 STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
 STR_NAME_MAIL_OYU_10	:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
-STR_NAME_MAIL_SUYU42   :SUYU 42 Mail Van
+STR_NAME_MAIL_SUYU42    :SUYU 42 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
 STR_NAME_MAIL_44		:MANI 44 Express Van
 STR_NAME_MAIL_MANI_34	:MANI 34 Armoured Van
@@ -362,11 +362,6 @@ STR_REFIT_PAX_ORN25		: {SILVER}ORONE 25{BLACK} I. Class Sleeper Coach
 STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} I. Class Sleeper Coach
 STR_REFIT_PAX_OS24		: {SILVER}OSHI 24{BLACK} Dining Car
 STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
-
-
-
-
-
 
 
 
@@ -577,6 +572,9 @@ STR_SUFFIX_HAMAMATSU     :{BLACK}(Hamamatsu Depot){BLACK}
 STR_SUFFIX_NAEBO         :{BLACK}(Naebo Depot){BLACK}
 STR_SUFFIX_LOGO          :{SILVER}(Logo){BLACK}
 
+STR_SUFFIX_FOPEN		:(Open)
+STR_SUFFIX_FCOVER	:(Covered)
+
 STR_SUFFIX_EXP :OBSOLETE
 
 #################
@@ -645,30 +643,10 @@ STR_REFIT_AUTOFORM_SLEEPER	: {GREEN}Auto-Formation{BLACK} Night Train
 STR_REFIT_AUTOFORM_TSUBAME	: {GREEN}Auto-Formation{BLACK} {GOLD}"Tsubame"{BLACK}
 STR_REFIT_AUTOFORM_HATO		: {GREEN}Auto-Formation{BLACK} {GOLD}"Hato"{BLACK}
 
-STR_REFIT_BROWN_OLD	    : {WHITE}JNR{BLACK} Standard Brown (Old Shape)
-STR_REFIT_BROWN_NEW	    : {WHITE}JNR{BLACK} Standard Brown (New Shape)
-STR_REFIT_RED_OLD	    : {WHITE}JNR{BLACK} Red (Old Shape)
-STR_REFIT_RED_NEW	    : {WHITE}JNR{BLACK} Red (New Shape)
-STR_REFIT_CC_OLD		: {GREEN}Company Colour{BLACK} (Old Shape)
-STR_REFIT_CC_NEW		: {GREEN}Company Colour{BLACK} (New Shape)
-STR_REFIT_CC_PROTOTYPE	: {GREEN}Company Colour{BLACK} (Prototype)
-
 STR_REFIT_YEARDEP_1ST	: 1. Class {GREEN}(Year-Dependent){BLACK}
 STR_REFIT_YEARDEP_2ND	: 2. Class {GREEN}(Year-Dependent){BLACK}
 
-STR_REFIT_FRANDOM	:, Random
-STR_REFIT_FBROWN	:, Brown
-STR_REFIT_FBLACK	:, Black
-STR_REFIT_FSILVER	:, Silver
-STR_REFIT_FGREEN	:, Green
-STR_REFIT_FBLUE		:, Blue
-STR_REFIT_FYELLOW	:, Yellow
-STR_REFIT_FSTRIPE	:, Stripe
-STR_REFIT_FOPEN		:, Open
-STR_REFIT_FCOVER	:, Covered
-STR_REFIT_FCREAM	:, Cream
-STR_REFIT_FWHITE	:, White
-STR_REFIT_FLOGO		:, Logo
+
 
 
 # ####################
