--- a/lang/english.lng
+++ b/lang/english.lng
@@ -194,20 +194,20 @@ STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
 #standard, no space, operators
 #################
 
-STR_CONCAT_2	:{STRING} {STRING}
-STR_CONCAT_3	:{STRING} {STRING} {STRING}
-STR_CONCAT_4	:{STRING} {STRING} {STRING} {STRING}
+STR_CONCAT_2	: {STRING} {STRING}
+STR_CONCAT_3	: {STRING} {STRING} {STRING}
+STR_CONCAT_4	: {STRING} {STRING} {STRING} {STRING}
 
 STR_CONCAT_3S	:{STRING}{STRING}{STRING}
 STR_CONCAT_4S	:{STRING}{STRING}{STRING}{STRING}
 STR_CONCAT_5S	:{STRING}{STRING}{STRING}{STRING}{STRING}
 
 STR_CONCAT_1C	:{BLACK}Operators: {STRING}{}
-STR_CONCAT_2C	:{BLACK}Operators: {STRING} /{STRING}{}
-STR_CONCAT_3C	:{BLACK}Operators: {STRING} /{STRING} /{STRING}{}
-STR_CONCAT_4C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING}{}
-STR_CONCAT_5C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING} /{STRING}{}
-STR_CONCAT_6C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING} /{STRING} /{STRING}{}
+STR_CONCAT_2C	:{BLACK}Operators: {STRING} / {STRING}{}
+STR_CONCAT_3C	:{BLACK}Operators: {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_4C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_5C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
+STR_CONCAT_6C	:{BLACK}Operators: {STRING} / {STRING} / {STRING} / {STRING} / {STRING} / {STRING}{}
 
 STR_CONCAT_1F	:{BLACK} - {STRING}
 STR_CONCAT_2F	:{BLACK} - {STRING}{BLACK} / {STRING}
@@ -218,63 +218,116 @@ STR_CONCAT_4F	:{BLACK} - {STRING}{BLACK} / {STRING}{BLACK} / {STRING}{BLACK} / {
 #PAXMAIL  REFITS#
 #################
 
+# Mail/express vans
 
-STR_REFIT_PAX_HA4995		: {SILVER}HA 4995{BLACK}
-STR_REFIT_PAX_HABU3			: {SILVER}HABU 3{BLACK}
-STR_REFIT_PAX_RO481			: {SILVER}RO 481{BLACK}
-STR_REFIT_MAIL_HANI1		: {SILVER}HANI 1{BLACK}
-STR_REFIT_MAIL_MANI34	    : {SILVER}MANI 34{BLACK}
-STR_REFIT_MAIL_MANI35       : {SILVER}MANI 35{BLACK}
-STR_REFIT_MAIL_MANI36       : {SILVER}MANI 36{BLACK}
-STR_REFIT_MAIL_SUYU42       : {SILVER}SUYU 42{BLACK}
-STR_REFIT_MAIL_SUYU43       : {SILVER}SUYU 43{BLACK}
+STR_REFIT_MAIL_MANI34	    :{SILVER}MANI 34{BLACK}
+STR_REFIT_MAIL_MANI35       :{SILVER}MANI 35{BLACK}
+STR_REFIT_MAIL_MANI36       :{SILVER}MANI 36{BLACK}
+STR_REFIT_MAIL_SUYU42       :{SILVER}SUYU 42{BLACK}
+STR_REFIT_MAIL_SUYU43       :{SILVER}SUYU 43{BLACK}
 
 
-STR_REFIT_MAYU_33		: {SILVER}MAYU 33{BLACK} Mail Van
-STR_REFIT_MANI_31		: {SILVER}MANI 31{BLACK} Luggage Van
-STR_REFIT_SUHANE_31_JGR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
-STR_REFIT_SUHANE_31_JNR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
+STR_REFIT_MAYU_33		:{SILVER}MAYU 33{BLACK} Mail Van
+STR_REFIT_MANI_31		:{SILVER}MANI 31{BLACK} Luggage Van
+STR_REFIT_SUHANE_31_JGR	:{SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
+STR_REFIT_SUHANE_31_JNR	:{SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
 
 
 
-STR_REFIT_SUNI_40		: {SILVER}SUNI 40{BLACK} Luggage Van
-STR_REFIT_SUYU_44		: {SILVER}SUYU 44{BLACK} Mail Van
-STR_REFIT_WAKI_8000		: {SILVER}WAKI 8000{BLACK} Express Box Van
-STR_REFIT_SUNI_41		: {SILVER}SUNI 41{BLACK} Mail Van with Conductor's Room
-STR_REFIT_WASAFU_8000	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Silver)
-STR_REFIT_WASAFU_BLUE	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Blue)
+STR_REFIT_SUNI_40		:{SILVER}SUNI 40{BLACK} Luggage Van
+STR_REFIT_SUYU_44		:{SILVER}SUYU 44{BLACK} Mail Van
+STR_REFIT_WAKI_8000		:{SILVER}WAKI 8000{BLACK} Express Box Van
+STR_REFIT_SUNI_41		:{SILVER}SUNI 41{BLACK} Mail Van with Conductor's Room
+STR_REFIT_WASAFU_8000	:{SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Silver)
+STR_REFIT_WASAFU_BLUE	:{SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Blue)
+
+# 1870 coaches
+
+STR_REFIT_PAX_HA4995		:{SILVER}HA 4995{BLACK}
+STR_REFIT_PAX_HABU3			:{SILVER}HABU 3{BLACK}
+STR_REFIT_PAX_RO481			:{SILVER}RO 481{BLACK}
+STR_REFIT_MAIL_HANI1		:{SILVER}HANI 1{BLACK}
+
+# 1880 coaches
+
+STR_REFIT_PAX_FKI5670			:{SILVER}FUKOI 5670{BLACK}
+STR_REFIT_PAX_FKH7925			:{SILVER}FUKOHA 7925{BLACK}
+STR_REFIT_PAX_FKR5675			:{SILVER}FUKORO 5675{BLACK}
+STR_REFIT_PAX_FKH7945			:{SILVER}FUKOHA 7945{BLACK}
+STR_REFIT_PAXMAIL_FKHY8050		:{SILVER}FUKOHAYU 8050{BLACK}
+STR_REFIT_MAIL_KN8890		    :{SILVER}KONI 8890{BLACK}
+
+# 1910 coaches
+
+STR_REFIT_PAX_HOHA6810			:{SILVER}HOHA 6810{BLACK}
+STR_REFIT_PAX_HOHAFU7570		:{SILVER}HOHAFU 7570{BLACK}
+STR_REFIT_PAX_HORO5535			:{SILVER}HORO 5535{BLACK}
+STR_REFIT_PAX_HOROFU5615		:{SILVER}HOROFU 5615{BLACK}
+STR_REFIT_PAX_HOYA5100			:{SILVER}HOYA 5100{BLACK}
+STR_REFIT_PAX_INERO5135			:{SILVER}INERO 5135{BLACK}
+STR_REFIT_PAX_INAI5035			:{SILVER}INAI 5035{BLACK}
+STR_REFIT_PAX_HOSHI5065			:{SILVER}HOSHI 5065{BLACK}
+STR_REFIT_PAXMAIL_NAHANI8430	:{SILVER}NAHANO 8430{BLACK}
+STR_REFIT_MAIL_HONI8900			:{SILVER}HONI 8900{BLACK}
+STR_REFIT_MAIL_HOYUNI8725		:{SILVER}HOYUNI 8725{BLACK}
 
 
 
+#########
+#SUHA 32#
+#########
+STR_REFIT_PAX_SUHA32		:{SILVER}SUHA 32{BLACK}
+STR_REFIT_PAX_MARONE37		:{SILVER}MARONE 37{BLACK}
+STR_REFIT_PAX_SURO30		:{SILVER}SURO 30{BLACK}
+STR_REFIT_PAX_MAINE37		:{SILVER}MAINE 37{BLACK}
+STR_REFIT_PAX_SUSHI37		:{SILVER}SUSHI 37{BLACK}
+STR_REFIT_PAX_MAISHI37		:{SILVER}MAISHI 37{BLACK}
+STR_REFIT_PAX_SUHANE31		:{SILVER}SUHANE 31{BLACK}
+STR_REFIT_PAX_MAINEFU37		:{SILVER}MAINEFU 37{BLACK}
+STR_REFIT_PAX_MAIRONEFU37	:{SILVER}MAIRONEFU 37{BLACK}
+STR_REFIT_PAX_SITE37		:{SILVER}SITE 37{BLACK}
 
-STR_REFIT_PAX_FKI5670_HCC			: {SILVER}FUKOI 5670{BLACK} Clerestory Coach (Yellow)
-STR_REFIT_PAX_FKH7925_HCC			: {SILVER}FUKOHA 7925{BLACK} Flat Roof Coach (Yellow)
-STR_REFIT_PAXMAIL_FKHY_8050_HCC		: {SILVER}FUKOHAYU 8050{BLACK} Combine Coach (Yellow)
-STR_REFIT_PAX_FKI5670_JGR			: {SILVER}FUKOI 5670{BLACK} I. Class Coach (Brown/White)
-STR_REFIT_PAX_FKR5675_JGR			: {SILVER}FUKORO 5675{BLACK} II. Class Coach (Brown/Blue)
-STR_REFIT_PAX_FKH7945_JGR			: {SILVER}FUKOHA 7945{BLACK} III. Class Coach (Brown/Red)
-STR_REFIT_PAX_FKH7925_JGR			: {SILVER}FUKOHA 7925{BLACK} III. Class Flat Roof Coach (Brown/Red)
-STR_REFIT_PAXMAIL_FKHY_8050_JGR		: {SILVER}FUKOHAYU 8050{BLACK} Combine Coach (Brown/Red)
-STR_REFIT_PAX_FKI5670_BROWN			: {SILVER}FUKOI 5670{BLACK} Clerestory Coach (Brown)
-STR_REFIT_PAX_FKH7925_BROWN			: {SILVER}FUKOHA 7925{BLACK} Flat Roof Coach (Brown)
-STR_REFIT_PAXMAIL_FKHY_8050_BROWN	: {SILVER}FUKOHAYU 8050{BLACK} Combine Coach (Brown)
-STR_REFIT_MAIL_KN8890_HCC			: {SILVER}KONI 8890{BLACK} Luggage Van (Yellow)
-STR_REFIT_MAIL_KN8890_JGR			: {SILVER}KONI 8890{BLACK} Luggage Van (Brown)
-
-STR_REFIT_PAX_HOHA6810_JGR			: {SILVER}HOHA 6810{BLACK} III. Class Coach (Brown/Red)
-STR_REFIT_PAX_HOHAFU7570_JGR		: {SILVER}HOHAFU 7570{BLACK} III. Class Coach with Conductor's Room (Brown/Red)
-STR_REFIT_PAX_HORO5535_JGR			: {SILVER}HORO 5535{BLACK} II. Class Coach (Brown/Blue)
-STR_REFIT_PAX_HOROFU5615_JGR		: {SILVER}HOROFU 5615{BLACK} II. Class Coach with Conductor's Room (Brown/Blue)
-STR_REFIT_PAX_HOYA5100_JGR			: {SILVER}HOYA 5100{BLACK} I. Class Coach (Brown/White)
-STR_REFIT_PAX_INERO5135_JGR			: {SILVER}INERO 5135{BLACK} II. Class Sleeper (Brown/Blue)
-STR_REFIT_PAX_INAI5035_JGR			: {SILVER}INAI 5035{BLACK} I. Class Sleeper (Brown/White)
-STR_REFIT_PAX_HOSHI5065_JGR			: {SILVER}HOSHI 5065{BLACK} Dining Car (Brown)
-STR_REFIT_PAXMAIL_NAHANI8430_JGR			: {SILVER}NAHANO 8430{BLACK} III. Class Combine Coach (Brown/Red)
-STR_REFIT_PAXMAIL_NAHANI8430_JGR_FLIP		: {SILVER}NAHANO 8430{BLACK} III. Class Combine Coach, Flipped (Brown/Red)
-STR_REFIT_MAIL_HONI8900_JGR			: {SILVER}HONI 8900{BLACK} Luggage Van (Brown)
-STR_REFIT_MAIL_HOYUNI8725_JGR		: {SILVER}HOYUNI 8725{BLACK} Mail Van (Brown)
+#########
+#SUHA 43#
+#########
+STR_REFIT_PAX_SUHA43		:{SILVER}SUHA 43{BLACK}
+STR_REFIT_PAX_SUHAFU43		:{SILVER}SUHAFU 43{BLACK}
+STR_REFIT_PAX_SUHA44		:{SILVER}SUHA 44 {BLACK}
+STR_REFIT_PAX_SUHAFU44		:{SILVER}SUHAFU 44{BLACK}
+STR_REFIT_PAX_SURO51		:{SILVER}SURO 51{BLACK}
+STR_REFIT_PAX_SURO54		:{SILVER}SURO 54{BLACK}
+STR_REFIT_PAX_MASHI35		:{SILVER}MASHI 35{BLACK}
+STR_REFIT_PAX_MAINE40		:{SILVER}MAINE 40{BLACK}
+STR_REFIT_PAX_MARONE40		:{SILVER}MARONE 40{BLACK}
+STR_REFIT_PAX_MARONE41		:{SILVER}MARONE 41{BLACK}
+STR_REFIT_PAX_SUHANI35		:{SILVER}SUHANI 35{BLACK}
+STR_REFIT_PAX_SUYA42		:{SILVER}SUYA 42{BLACK}
 
 
+###########
+#10 SERIES#
+###########
+STR_REFIT_PAX_NR10		:{SILVER}NARO 10{BLACK}
+STR_REFIT_PAX_ORN10		:{SILVER}ORONE 10{BLACK}
+STR_REFIT_PAX_OHN17		:{SILVER}OHANE 17{BLACK}
+STR_REFIT_PAX_NRHN10	:{SILVER}NAROHANE 10{BLACK}
+STR_REFIT_PAX_NH10		:{SILVER}NAHA 10{BLACK}
+STR_REFIT_PAX_NHF10		:{SILVER}NAHAFU 10{BLACK}
+STR_REFIT_PAX_NHN10		:{SILVER}NAHANE 10{BLACK}
+STR_REFIT_PAX_OS17		:{SILVER}OSHI 17{BLACK}
+
+
+###########
+#24 SERIES# to mod
+###########
+STR_REFIT_PAX_OHNF25	:{SILVER}OHANEFU 25{BLACK} II. Class Sleeper Coach with Conductor's Room
+STR_REFIT_PAX_OHNF24	:{SILVER}OHANEFU 24{BLACK} II. Class Sleeper Coach with Conductor's Room
+STR_REFIT_PAX_OHN25		:{SILVER}OHANE 25{BLACK} II. Class Sleeper Coach
+STR_REFIT_PAX_OHN24		:{SILVER}OHANE 24{BLACK} II. Class Sleeper Coach
+STR_REFIT_PAX_ORN25		:{SILVER}ORONE 25{BLACK} I. Class Sleeper Coach
+STR_REFIT_PAX_ORN24		:{SILVER}ORONE 24{BLACK} I. Class Sleeper Coach
+STR_REFIT_PAX_OS24		:{SILVER}OSHI 24{BLACK} Dining Car
+STR_REFIT_PAX_KN24		:{SILVER}KANI 24{BLACK} Generator Van
 
 ################
 #CLASS SUFFIXES#
@@ -306,64 +359,6 @@ STR_SUFFIX_INSPECTION			: Inspection Car
 STR_SUFFIX_ARMOURED				: Armoured Van
 STR_SUFFIX_MAIL                 : Mail Van
 STR_SUFFIX_LUGGAGE              : Luggage Van
-
-#########
-#SUHA 32#
-#########
-STR_REFIT_PAX_SUHA32		: {SILVER}SUHA 32{BLACK}
-STR_REFIT_PAX_MARONE37		: {SILVER}MARONE 37{BLACK}
-STR_REFIT_PAX_SURO30		: {SILVER}SURO 30{BLACK}
-STR_REFIT_PAX_MAINE37		: {SILVER}MAINE 37{BLACK}
-STR_REFIT_PAX_SUSHI37		: {SILVER}SUSHI 37{BLACK}
-STR_REFIT_PAX_MAISHI37		: {SILVER}MAISHI 37{BLACK}
-STR_REFIT_PAX_SUHANE31		: {SILVER}SUHANE 31{BLACK}
-STR_REFIT_PAX_MAINEFU37		: {SILVER}MAINEFU 37{BLACK}
-STR_REFIT_PAX_MAIRONEFU37	: {SILVER}MAIRONEFU 37{BLACK}
-STR_REFIT_PAX_SITE37		: {SILVER}SITE 37{BLACK}
-
-#########
-#SUHA 43#
-#########
-STR_REFIT_PAX_SUHA43		: {SILVER}SUHA 43{BLACK}
-STR_REFIT_PAX_SUHAFU43		: {SILVER}SUHAFU 43{BLACK}
-STR_REFIT_PAX_SUHA44		: {SILVER}SUHA 44 {BLACK}
-STR_REFIT_PAX_SUHAFU44		: {SILVER}SUHAFU 44{BLACK}
-STR_REFIT_PAX_SURO51		: {SILVER}SURO 51{BLACK}
-STR_REFIT_PAX_SURO54		: {SILVER}SURO 54{BLACK}
-STR_REFIT_PAX_MASHI35		: {SILVER}MASHI 35{BLACK}
-STR_REFIT_PAX_MAINE40		: {SILVER}MAINE 40{BLACK}
-STR_REFIT_PAX_MARONE40		: {SILVER}MARONE 40{BLACK}
-STR_REFIT_PAX_MARONE41		: {SILVER}MARONE 41{BLACK}
-STR_REFIT_PAX_SUHANI35		: {SILVER}SUHANI 35{BLACK}
-STR_REFIT_PAX_SUYA42		: {SILVER}SUYA 42{BLACK}
-
-
-###########
-#10 SERIES#
-###########
-STR_REFIT_PAX_NR10		: {SILVER}NARO 10{BLACK}
-STR_REFIT_PAX_ORN10		: {SILVER}ORONE 10{BLACK}
-STR_REFIT_PAX_OHN17		: {SILVER}OHANE 17{BLACK}
-STR_REFIT_PAX_NRHN10	: {SILVER}NAROHANE 10{BLACK}
-STR_REFIT_PAX_NH10		: {SILVER}NAHA 10{BLACK}
-STR_REFIT_PAX_NHF10		: {SILVER}NAHAFU 10{BLACK}
-STR_REFIT_PAX_NHN10		: {SILVER}NAHANE 10{BLACK}
-STR_REFIT_PAX_OS17		: {SILVER}OSHI 17{BLACK}
-
-
-###########
-#24 SERIES#to mod
-###########
-STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} II. Class Sleeper Coach with Conductor's Room
-STR_REFIT_PAX_OHNF24	: {SILVER}OHANEFU 24{BLACK} II. Class Sleeper Coach with Conductor's Room
-STR_REFIT_PAX_OHN25		: {SILVER}OHANE 25{BLACK} II. Class Sleeper Coach
-STR_REFIT_PAX_OHN24		: {SILVER}OHANE 24{BLACK} II. Class Sleeper Coach
-STR_REFIT_PAX_ORN25		: {SILVER}ORONE 25{BLACK} I. Class Sleeper Coach
-STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} I. Class Sleeper Coach
-STR_REFIT_PAX_OS24		: {SILVER}OSHI 24{BLACK} Dining Car
-STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
-
-
 
 ################
 #FREIGHT WAGONS#
@@ -458,43 +453,43 @@ STR_NAME_YO_8000		:YO 8000 Brake Van
 #COMPANY SUFFIXES#
 ##################
 
-STR_SUFFIX_JGR			:{WHITE} JGR
-STR_SUFFIX_JNR			:{WHITE} JNR
-STR_SUFFIX_JRF			:{WHITE} JR Freight
-STR_SUFFIX_JRE			:{WHITE} JR East
-STR_SUFFIX_JRC			:{WHITE} JR Central
-STR_SUFFIX_JRW			:{WHITE} JR West
-STR_SUFFIX_JRS			:{WHITE} JR Shikoku
-STR_SUFFIX_JRK			:{WHITE} JR Kyushu
-STR_SUFFIX_JRH			:{WHITE} JR Hokkaido
-STR_SUFFIX_JR			:{WHITE} JR Group
+STR_SUFFIX_JGR			:{WHITE}JGR
+STR_SUFFIX_JNR			:{WHITE}JNR
+STR_SUFFIX_JRF			:{WHITE}JR Freight
+STR_SUFFIX_JRE			:{WHITE}JR East
+STR_SUFFIX_JRC			:{WHITE}JR Central
+STR_SUFFIX_JRW			:{WHITE}JR West
+STR_SUFFIX_JRS			:{WHITE}JR Shikoku
+STR_SUFFIX_JRK			:{WHITE}JR Kyushu
+STR_SUFFIX_JRH			:{WHITE}JR Hokkaido
+STR_SUFFIX_JR			:{WHITE}JR Group
 
-STR_SUFFIX_AICHI		:{WHITE} Aichi Railway
-STR_SUFFIX_MEITETSU		:{WHITE} Meitetsu
-STR_SUFFIX_HCC			:{WHITE} Hokkaido Coal Company
-STR_SUFFIX_OIGAWA		:{WHITE} Ōigawa Railway
-STR_SUFFIX_SEIBU		:{WHITE} Seibu Railway
-STR_SUFFIX_SAKHALIN		:{WHITE} Sakhalin Railway
-STR_SUFFIX_SAGANO		:{WHITE} Sagano Scenic Railway
-STR_SUFFIX_WATARASE 	:{WHITE} Watarase Keikoku
-STR_SUFFIX_KANSAI		:{WHITE} Kansai Freight Railway
-STR_SUFFIX_ASAHIKAWA		: {WHITE}Asahikawa Express Railway
-STR_SUFFIX_AKITA_RINKAI	    : {WHITE}Akita Rinkai Railway
-STR_SUFFIX_TOMAKOMAI		: {WHITE}Tomakomai Port Development Line
-STR_SUFFIX_NAGOYA_RINKAI	: {WHITE}Nagoya Rinkai Railway
-STR_SUFFIX_KOSAKA		    : {WHITE}Kosaka Railway
-STR_SUFFIX_KAMIOKA		    : {WHITE}Kamioka Railway
-STR_SUFFIX_KASHIMA		    : {WHITE}Kashima Railway
+STR_SUFFIX_AICHI		:{WHITE}Aichi Railway
+STR_SUFFIX_MEITETSU		:{WHITE}Meitetsu
+STR_SUFFIX_HCC			:{WHITE}Hokkaido Coal Company
+STR_SUFFIX_OIGAWA		:{WHITE}Ōigawa Railway
+STR_SUFFIX_SEIBU		:{WHITE}Seibu Railway
+STR_SUFFIX_SAKHALIN		:{WHITE}Sakhalin Railway
+STR_SUFFIX_SAGANO		:{WHITE}Sagano Scenic Railway
+STR_SUFFIX_WATARASE 	:{WHITE}Watarase Keikoku
+STR_SUFFIX_KANSAI		:{WHITE}Kansai Freight Railway
+STR_SUFFIX_ASAHIKAWA		:{WHITE}Asahikawa Express Railway
+STR_SUFFIX_AKITA_RINKAI	    :{WHITE}Akita Rinkai Railway
+STR_SUFFIX_TOMAKOMAI		:{WHITE}Tomakomai Port Development Line
+STR_SUFFIX_NAGOYA_RINKAI	:{WHITE}Nagoya Rinkai Railway
+STR_SUFFIX_KOSAKA		    :{WHITE}Kosaka Railway
+STR_SUFFIX_KAMIOKA		    :{WHITE}Kamioka Railway
+STR_SUFFIX_KASHIMA		    :{WHITE}Kashima Railway
 
-STR_SUFFIX_PRIVATE		:{WHITE} Various Private Operators
+STR_SUFFIX_PRIVATE		:{WHITE}Various Private Operators
 
-STR_SUFFIX_NIPPON       :{WHITE} Nippon Express
-STR_SUFFIX_TOSHIBA      :{WHITE} Toshiba Logistics
-STR_SUFFIX_YAWATA       :{WHITE} Yawata Works / Nippon Steel
+STR_SUFFIX_NIPPON       :{WHITE}Nippon Express
+STR_SUFFIX_TOSHIBA      :{WHITE}Toshiba Logistics
+STR_SUFFIX_YAWATA       :{WHITE}Yawata Works / Nippon Steel
 
-STR_SUFFIX_GNR          :{WHITE} Great Northern Railway
-STR_SUFFIX_NYC          :{WHITE} New York Central
-STR_SUFFIX_AMTRAK       :{WHITE} Amtrak
+STR_SUFFIX_GNR          :{WHITE}Great Northern Railway
+STR_SUFFIX_NYC          :{WHITE}New York Central
+STR_SUFFIX_AMTRAK       :{WHITE}Amtrak
 
 #####################
 #NEW MODULAR STRINGS#
@@ -502,8 +497,23 @@ STR_SUFFIX_AMTRAK       :{WHITE} Amtrak
 
 STR_SUFFIX_YEARDEP	:{GREEN}Year-Dependent{BLACK}
 STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
+STR_SUFFIX_CC		:{GREEN}Company Colour{BLACK}
+STR_SUFFIX_AUTOFORM	:{GREEN}Auto-Formation{BLACK}
+
+STR_REFIT_YEARDEP	:{BLACK} - {GREEN}Year-Dependent{BLACK}
+STR_REFIT_CC		:{BLACK} - {GREEN}Company Colour{BLACK}
+STR_REFIT_RANDOM	:{BLACK} - {GREEN}Random{BLACK}
+STR_REFIT_AUTOFORM	:{BLACK} - {GREEN}Auto-Formation{BLACK}
 
 
+STR_REFIT_AUTOYEAR	: {GREEN}Random {BLACK} -  Auto-Update
+STR_REFIT_RANDYEAR	: {GREEN}Random {BLACK} -  Year-Dependent
+
+
+STR_REFIT_YEARFORM	: {GREEN}Auto-Formation {BLACK} -  Year-Dependent
+
+
+# Named Trains
 
 STR_SUFFIX_IMPERIAL      :{GOLD}"Imperial Train"{BLACK}
 STR_SUFFIX_EXPRESS       :{GOLD}"Express"{BLACK}
@@ -520,6 +530,7 @@ STR_SUFFIX_SOUTHERNCROSS :{GOLD}"Southern Cross"{BLACK}
 STR_SUFFIX_AMERICANTRAIN :{GOLD}"American Train"{BLACK}
 STR_SUFFIX_YASURAGI      :{GOLD}"Yasuragi"{BLACK}
 STR_SUFFIX_7STARS        :{GOLD}"Seven Stars in Kyushu"{BLACK}
+STR_SUFFIX_SALONEXP      :{GOLD}"Salon Express Tokyo"{BLACK}
 STR_SUFFIX_NOROKKO            :{GOLD}"Norokko"{BLACK}
 STR_SUFFIX_ISLANDEXPRESS      :{GOLD}"Island Express"{BLACK}
 STR_SUFFIX_NOSTALGICVIEW      :{GOLD}"Nostalgic View"{BLACK}
@@ -527,21 +538,11 @@ STR_SUFFIX_OKUIZUMO           :{GOLD}"Okuizumo Orochi"{BLACK}
 STR_SUFFIX_KINOKUNI           :{GOLD}"Kinokuni Seaside"{BLACK}
 
 
+# Misc Suffixes
 
-
-STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
-STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
-STR_REFIT_RANDOM	: {GREEN}Random{BLACK}
-STR_REFIT_AUTOFORM	: {GREEN}Auto-Formation{BLACK}
-
-
-STR_REFIT_AUTOYEAR	: {GREEN}Random, Auto-Update{BLACK}
-STR_REFIT_RANDYEAR	: {GREEN}Random, Year-Dependent{BLACK}
-
-
-STR_REFIT_YEARFORM	: {GREEN}Auto-Formation, Year-Dependent{BLACK}
-
-STR_SUFFIX_AIRCON	:{BLACK}(Air Conditioned)
+STR_SUFFIX_AIRCON	     :{BLACK}(Air Conditioned)
+STR_SUFFIX_CLERESTORY    :{BLACK}(Clerestory)
+STR_SUFFIX_FLATROOF      :{BLACK}(Flat Roof)
 STR_SUFFIX_ORIGINAL	:{BLACK}(Original)
 STR_SUFFIX_PROTO	:{BLACK}(Prototype)
 STR_SUFFIX_PANTOS	:{BLACK}(New Pantographs)
@@ -550,6 +551,7 @@ STR_SUFFIX_UPGRADE	:{BLACK}(Upgraded)
 STR_SUFFIX_OLDSHAPE	:{BLACK}(Old Shape)
 STR_SUFFIX_NEWSHAPE	:{BLACK}(New Shape)
 STR_SUFFIX_REFURB	:{BLACK}(Refurbished)
+STR_SUFFIX_FLIPPED  :{BLACK}(Flipped)
 STR_SUFFIX_NOLOGO   :{BLACK}(No Logo)
 STR_SUFFIX_LARGELOGO    :{BLACK}(Large Logo)
 STR_SUFFIX_STRIPE       :{BLACK}(Stripe)
@@ -572,10 +574,12 @@ STR_SUFFIX_HAMAMATSU     :{BLACK}(Hamamatsu Depot){BLACK}
 STR_SUFFIX_NAEBO         :{BLACK}(Naebo Depot){BLACK}
 STR_SUFFIX_LOGO          :{SILVER}(Logo){BLACK}
 
-STR_SUFFIX_FOPEN		:(Open)
+STR_SUFFIX_FOPEN	:(Open)
 STR_SUFFIX_FCOVER	:(Covered)
 
-STR_SUFFIX_EXP :OBSOLETE
+STR_SUFFIX_LOCAL	:{BLACK}Local Train
+STR_SUFFIX_LTDEXP	:{BLACK}Limited Express
+STR_SUFFIX_SLEEPER	:{BLACK}Night Train
 
 #################
 #MODULAR COLOUR SUFFIXES#
@@ -596,7 +600,6 @@ STR_COLOUR_PINK 			:{CREAM}Pink
 STR_COLOUR_CREAM			:{LTBROWN}Cream
 STR_COLOUR_YELLOW			:{YELLOW}Yellow
 
-STR_SUFFIX_CC				:{GREEN}Company Coloured
 
 #################
 #OLD COLOUR SUFFIXES#
