Paxmail string modularisation

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -227,10 +227,9 @@ STR_REFIT_MAIL_SUYU42       :{SILVER}SUYU 42{BLACK}
 STR_REFIT_MAIL_SUYU43       :{SILVER}SUYU 43{BLACK}
 
 
-STR_REFIT_MAYU_33		:{SILVER}MAYU 33{BLACK} Mail Van
-STR_REFIT_MANI_31		:{SILVER}MANI 31{BLACK} Luggage Van
-STR_REFIT_SUHANE_31_JGR	:{SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
-STR_REFIT_SUHANE_31_JNR	:{SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
+STR_REFIT_MAIL_MAYU33		:{SILVER}MAYU 33{BLACK}
+STR_REFIT_MAIL_MANI31		:{SILVER}MANI 31{BLACK}
+STR_REFIT_MAIL_SUHANE31	    :{SILVER}SUHANE 31{BLACK}
 
 
 
@@ -270,8 +269,6 @@ STR_REFIT_PAX_HOSHI5065			:{SILVER}HOSHI 5065{BLACK}
 STR_REFIT_PAXMAIL_NAHANI8430	:{SILVER}NAHANO 8430{BLACK}
 STR_REFIT_MAIL_HONI8900			:{SILVER}HONI 8900{BLACK}
 STR_REFIT_MAIL_HOYUNI8725		:{SILVER}HOYUNI 8725{BLACK}
-
-
 
 #########
 #SUHA 32#
@@ -318,16 +315,16 @@ STR_REFIT_PAX_OS17		:{SILVER}OSHI 17{BLACK}
 
 
 ###########
-#24 SERIES# to mod
+#24 SERIES#
 ###########
-STR_REFIT_PAX_OHNF25	:{SILVER}OHANEFU 25{BLACK} II. Class Sleeper Coach with Conductor's Room
-STR_REFIT_PAX_OHNF24	:{SILVER}OHANEFU 24{BLACK} II. Class Sleeper Coach with Conductor's Room
-STR_REFIT_PAX_OHN25		:{SILVER}OHANE 25{BLACK} II. Class Sleeper Coach
-STR_REFIT_PAX_OHN24		:{SILVER}OHANE 24{BLACK} II. Class Sleeper Coach
-STR_REFIT_PAX_ORN25		:{SILVER}ORONE 25{BLACK} I. Class Sleeper Coach
-STR_REFIT_PAX_ORN24		:{SILVER}ORONE 24{BLACK} I. Class Sleeper Coach
-STR_REFIT_PAX_OS24		:{SILVER}OSHI 24{BLACK} Dining Car
-STR_REFIT_PAX_KN24		:{SILVER}KANI 24{BLACK} Generator Van
+STR_REFIT_PAX_OHNF25	:{SILVER}OHANEFU 25{BLACK}
+STR_REFIT_PAX_OHNF24	:{SILVER}OHANEFU 24{BLACK}
+STR_REFIT_PAX_OHN25		:{SILVER}OHANE 25{BLACK}
+STR_REFIT_PAX_OHN24		:{SILVER}OHANE 24{BLACK}
+STR_REFIT_PAX_ORN25		:{SILVER}ORONE 25{BLACK}
+STR_REFIT_PAX_ORN24		:{SILVER}ORONE 24{BLACK}
+STR_REFIT_PAX_OS24		:{SILVER}OSHI 24{BLACK}
+STR_REFIT_PAX_KN24		:{SILVER}KANI 24{BLACK}
 
 ################
 #CLASS SUFFIXES#
@@ -337,7 +334,7 @@ STR_SUFFIX_PAX_2CLASS			: II. Class Coach
 STR_SUFFIX_PAX_1CLASS			: I. Class Coach
 STR_SUFFIX_PAX_12CLASS			: I./II. Class Coach
 STR_SUFFIX_PAX_GREEN			: Green Car
-STR_SUFFIX_CONDUCTOR			: with Conductor's Room
+STR_SUFFIX_CONDUCTOR			:with Conductor's Room
 
 STR_SUFFIX_OBS_1CLASS			: I. Class Observation Coach
 
@@ -531,12 +528,16 @@ STR_SUFFIX_AMERICANTRAIN :{GOLD}"American Train"{BLACK}
 STR_SUFFIX_YASURAGI      :{GOLD}"Yasuragi"{BLACK}
 STR_SUFFIX_7STARS        :{GOLD}"Seven Stars in Kyushu"{BLACK}
 STR_SUFFIX_SALONEXP      :{GOLD}"Salon Express Tokyo"{BLACK}
+
 STR_SUFFIX_NOROKKO            :{GOLD}"Norokko"{BLACK}
 STR_SUFFIX_ISLANDEXPRESS      :{GOLD}"Island Express"{BLACK}
 STR_SUFFIX_NOSTALGICVIEW      :{GOLD}"Nostalgic View"{BLACK}
 STR_SUFFIX_OKUIZUMO           :{GOLD}"Okuizumo Orochi"{BLACK}
 STR_SUFFIX_KINOKUNI           :{GOLD}"Kinokuni Seaside"{BLACK}
 
+STR_SUFFIX_TSUBAME           :{GOLD}"Tsubame"{BLACK}
+STR_SUFFIX_HATO              :{GOLD}"Hato"{BLACK}
+STR_SUFFIX_GINGA             :{GOLD}"Ginga"{BLACK}
 
 # Misc Suffixes
 
@@ -599,57 +600,6 @@ STR_COLOUR_ORANGE			:{ORANGE}Orange
 STR_COLOUR_PINK 			:{CREAM}Pink
 STR_COLOUR_CREAM			:{LTBROWN}Cream
 STR_COLOUR_YELLOW			:{YELLOW}Yellow
-
-
-#################
-#OLD COLOUR SUFFIXES#
-#now only used by coaches
-#################
-
-
-STR_SUFFIX_BROWN			:{BROWN}Brown
-STR_SUFFIX_BLUE				:{BLUE}Blue
-STR_SUFFIX_RED				:{RED}Red
-
-STR_SUFFIX_BROWN_BLUE		:{BROWN}Brown/Blue
-STR_SUFFIX_BROWN_RED		:{BROWN}Brown/Red
-STR_SUFFIX_BROWN_CREAM		:{BROWN}Brown/Cream
-STR_SUFFIX_BROWN_GREEN		:{BROWN}Brown/Green
-STR_SUFFIX_BROWN_YELLOW		:{BROWN}Brown/Yellow
-STR_SUFFIX_BROWN_GOLD		:{BROWN}Brown/Gold
-STR_SUFFIX_BROWN_SILVER		:{BROWN}Brown/Silver
-
-STR_SUFFIX_BLUE_GREEN		:{BLUE}Blue/Green
-STR_SUFFIX_BLUE_GOLD		:{BLUE}Blue/Gold
-STR_SUFFIX_BLUE_WHITE		:{BLUE}Blue/White
-STR_SUFFIX_BLUE_GREY		:{BLUE}Blue/Grey
-STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
-STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
-STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
-
-
-
-
-#####################
-#v OBSOLETE STRINGS #
-#####################
-
-
-STR_REFIT_AUTOFORM_HCC		: {GREEN}Auto-Formation{BLACK} {WHITE}Hokkaido Coal Company{BLACK} 
-STR_REFIT_AUTOFORM_JGR		: {GREEN}Auto-Formation{BLACK} {WHITE}JGR{BLACK} 
-STR_REFIT_AUTOFORM_BROWN	: {GREEN}Auto-Formation{BLACK} {WHITE}Brown{BLACK} 
-
-STR_REFIT_AUTOFORM_LOCAL	: {GREEN}Auto-Formation{BLACK} Local Train
-STR_REFIT_AUTOFORM_EXPRESS	: {GREEN}Auto-Formation{BLACK} Limited Express
-STR_REFIT_AUTOFORM_SLEEPER	: {GREEN}Auto-Formation{BLACK} Night Train
-
-STR_REFIT_AUTOFORM_TSUBAME	: {GREEN}Auto-Formation{BLACK} {GOLD}"Tsubame"{BLACK}
-STR_REFIT_AUTOFORM_HATO		: {GREEN}Auto-Formation{BLACK} {GOLD}"Hato"{BLACK}
-
-STR_REFIT_YEARDEP_1ST	: 1. Class {GREEN}(Year-Dependent){BLACK}
-STR_REFIT_YEARDEP_2ND	: 2. Class {GREEN}(Year-Dependent){BLACK}
-
-
 
 
 # ####################
@@ -748,8 +698,3 @@ STR_DESC_USAGE_FRT_T260	:{BLACK}Usage: {SILVER}Express Cargo - {GREEN}Use with M
 STR_DESC_BRAKE		:{BLACK}Usage: {SILVER}Brake Van - {GREEN}Attach behind slower freight wagons to increase speed limit{}
 
 STR_DESC_BRAKE_NA	:{BLACK}Brake Van Speed Boost: {RED}Not Available{}
-
-# ####################
-# OUTDATED STRINGS   #
-# ####################
-
