ef200 variant and many new gfx

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -38,7 +38,10 @@ STR_NAME_DD16	    :DD16
 STR_NAME_DD54	    :DD54 
 STR_NAME_DE10       :DE10
 STR_NAME_DD51       :DD51
-STR_NAME_DF200      :DF200
+STR_NAME_DF200_1     :DF200 Old type
+STR_NAME_DF200_2     :DF200 New type
+STR_NAME_DF200_P     :DF200 Prototype
+STR_NAME_DF200_7     :DF200-7000 
 STR_NAME_HD300      :HD300
 
 STR_NAME_AB10	:AB10 
@@ -59,6 +62,7 @@ STR_NAME_EF13	:EF13
 STR_NAME_EF13_1	:EF13 Old type 
 STR_NAME_EF13_2	:EF13 New type 
 STR_NAME_EF15	:EF15 
+STR_NAME_EF16	:EF16 
 STR_NAME_EF18	:EF18 
 
 STR_NAME_EF50	:EF50 
@@ -82,6 +86,7 @@ STR_NAME_EH50	:EH50
 STR_NAME_ED60	:ED60 
 STR_NAME_ED61	:ED61 
 STR_NAME_ED62	:ED62 
+STR_NAME_ED63	:ED63 Concept
 
 STR_NAME_EF60   :EF60
 STR_NAME_EF60_0	:EF60 Protoype 
@@ -102,6 +107,7 @@ STR_NAME_EF65_3	:EF65-1000
 STR_NAME_EF66	:EF66
 STR_NAME_EF66_1	:EF66-0 
 STR_NAME_EF66_2	:EF66-100 
+STR_NAME_EF66_3	:EF66-2000 Concept
 
 STR_NAME_EF67	:EF67
 STR_NAME_EF67_1	:EF67-0 Banker 
@@ -132,6 +138,7 @@ STR_NAME_EF70_2	:EF70 New type
 STR_NAME_EF71	:EF71
 
 STR_NAME_EF200	    :EF200 
+STR_NAME_EF200_P    :EF200 Prototype
 STR_NAME_EF210	    :EF210
 STR_NAME_EF210_0	:EF210-0 
 STR_NAME_EF210_1	:EF210-100 
@@ -352,6 +359,7 @@ STR_SUFFIX_SLEEPER_STANDARD		: Standard Sleeper
 STR_SUFFIX_SLEEPER_GREEN		: Green Car Sleeper
 
 STR_SUFFIX_GENERATOR			: Generator Van
+STR_SUFFIX_LOUNGE       		: Lounge Car
 STR_SUFFIX_INSPECTION			: Inspection Car
 STR_SUFFIX_ARMOURED				: Armoured Van
 STR_SUFFIX_MAIL                 : Mail Van
@@ -486,7 +494,10 @@ STR_SUFFIX_YAWATA       :{WHITE}Yawata Works / Nippon Steel
 
 STR_SUFFIX_GNR          :{WHITE}Great Northern Railway
 STR_SUFFIX_NYC          :{WHITE}New York Central
+STR_SUFFIX_MILW          :{WHITE}Milwaukee Road
+STR_SUFFIX_PRR          :{WHITE}Pennsylvania Railroad
 STR_SUFFIX_AMTRAK       :{WHITE}Amtrak
+
 
 #####################
 #NEW MODULAR STRINGS#
@@ -561,8 +572,13 @@ STR_SUFFIX_2TONE        :{BLACK}(Two-Tone)
 STR_SUFFIX_SEMIFIC      :{BLACK}(Semi-Fictional)
 STR_SUFFIX_FICTION      :{BLACK}(Fictional)
 STR_SUFFIX_PROPOSAL     :{BLACK}(Proposed - Never Built)
+STR_SUFFIX_CONCEPT      :{BLACK}(Concept - Never Built)
 STR_SUFFIX_EXPERIMENT   :{BLACK}(Experimental)
 STR_SUFFIX_BANKER       :{BLACK}(Banker Conversion)
+STR_SUFFIX_2WINDOW       :{BLACK}(Two Windows)
+STR_SUFFIX_3WINDOW       :{BLACK}(Three Windows)
+STR_SUFFIX_5WINDOW       :{BLACK}(Five Windows)
+
 
 STR_SUFFIX_JNR_RETRO     :{BLACK}(JNR Retro){BLACK}
 STR_SUFFIX_PANDA         :{BLACK}(Panda){BLACK}
@@ -574,6 +590,7 @@ STR_SUFFIX_REDBEAR    :{BLACK}(Red Bear){BLACK}
 STR_SUFFIX_HAMAMATSU     :{BLACK}(Hamamatsu Depot){BLACK}
 STR_SUFFIX_NAEBO         :{BLACK}(Naebo Depot){BLACK}
 STR_SUFFIX_LOGO          :{SILVER}(Logo){BLACK}
+STR_SUFFIX_CAMO          :{SILVER}(Camouflage Paint){BLACK}
 
 STR_SUFFIX_FOPEN	:(Open)
 STR_SUFFIX_FCOVER	:(Covered)
@@ -600,6 +617,7 @@ STR_COLOUR_ORANGE			:{ORANGE}Orange
 STR_COLOUR_PINK 			:{CREAM}Pink
 STR_COLOUR_CREAM			:{LTBROWN}Cream
 STR_COLOUR_YELLOW			:{YELLOW}Yellow
+STR_COLOUR_PURPLE			:{PURPLE}Purple
 
 
 # ####################
@@ -648,6 +666,7 @@ STR_DESC_USAGE_EF		:{BLACK}Usage: {SILVER}Express Passenger / Heavy Freight{}
 STR_DESC_USAGE_FF		:{BLACK}Usage: {SILVER}Express Passenger / Fast Freight{}
 STR_DESC_USAGE_BANK		:{BLACK}Usage: {SILVER}Banker / Pusher{}
 STR_DESC_USAGE_PROTO	:{BLACK}Usage: {SILVER}Prototype{}
+STR_DESC_USAGE_CONCEPT	:{BLACK}Usage: {SILVER}Concept - Never Built{}
 
 STR_DESC_USAGE_PAX_LOC	:{BLACK}Usage: {SILVER}Local Trains{}
 STR_DESC_USAGE_PAX_EXP	:{BLACK}Usage: {SILVER}Local / Express Trains{}
