--- a/lang/english.lng
+++ b/lang/english.lng
@@ -38,10 +38,11 @@ STR_NAME_DD16	    :DD16
 STR_NAME_DD54	    :DD54 
 STR_NAME_DE10       :DE10
 STR_NAME_DD51       :DD51
-STR_NAME_DF200_1     :DF200 Old type
-STR_NAME_DF200_2     :DF200 New type
-STR_NAME_DF200_P     :DF200 Prototype
-STR_NAME_DF200_7     :DF200-7000 
+STR_NAME_DF200      :DF200
+STR_NAME_DF200_1     :DF200-0
+STR_NAME_DF200_2     :DF200-100 / -200
+STR_NAME_DF200_P     :DF200-901 Prototype
+STR_NAME_DF200_7     :DF200-7000 {GOLD}"Seven Stars in Kyushu"{BLACK}
 STR_NAME_HD300      :HD300
 
 STR_NAME_AB10	:AB10 
@@ -174,12 +175,12 @@ STR_NAME_PAX_SUHA43		:SUHA 43 Passenger Coach
 STR_NAME_PAX_SUHA44		:SUHA 43 {GOLD}"Tokaidō"{BLACK}
 STR_NAME_SLEEPER_10		:10 Series Passenger Coach
 STR_NAME_PASSENGER_12	:12 Series Passenger Coach
-STR_NAME_PASSENGER_24	:24 Series Passenger Coach
+STR_NAME_PASSENGER_24	:24 Series Sleeper Coach
 STR_NAME_PASSENGER_50	:50 Series Passenger Coach
 STR_NAME_PAX_50_5000	:50-5000 Series {GOLD}"Rapid Kaikyō"{BLACK}
 
-STR_NAME_PAX_26			:E26 Series Sleeper Coach {GOLD}"Cassiopeia"{BLACK}
-STR_NAME_PAX_77			:77-7000 Series Sleeper Coach {GOLD}"Seven Stars"{BLACK}
+STR_NAME_PAX_26			:E26 Series {GOLD}"Cassiopeia"{BLACK}
+STR_NAME_PAX_77			:77 Series {GOLD}"Seven Stars in Kyushu"{BLACK}
 STR_NAME_JOYFUL_12		:12 Series {GOLD}"Joyful Train"{BLACK}
 
 STR_NAME_MAIL_HANI1		:HANI 1 Luggage Van
@@ -565,7 +566,10 @@ STR_SUFFIX_NEWSHAPE	:{BLACK}(New Shape)
 STR_SUFFIX_REFURB	:{BLACK}(Refurbished)
 STR_SUFFIX_FLIPPED  :{BLACK}(Flipped)
 STR_SUFFIX_NOLOGO   :{BLACK}(No Logo)
+STR_SUFFIX_LOGO          :{BLACK}(Logo)
 STR_SUFFIX_LARGELOGO    :{BLACK}(Large Logo)
+STR_SUFFIX_REDLOGO      :{BLACK}(Red Logo)
+STR_SUFFIX_WHITELOGO    :{BLACK}(White Logo)
 STR_SUFFIX_STRIPE       :{BLACK}(Stripe)
 STR_SUFFIX_WHISKERS     :{BLACK}(Whiskers)
 STR_SUFFIX_2TONE        :{BLACK}(Two-Tone)
@@ -589,8 +593,8 @@ STR_SUFFIX_BLUETHUNDER    :{BLACK}(Blue Thunder){BLACK}
 STR_SUFFIX_REDBEAR    :{BLACK}(Red Bear){BLACK}
 STR_SUFFIX_HAMAMATSU     :{BLACK}(Hamamatsu Depot){BLACK}
 STR_SUFFIX_NAEBO         :{BLACK}(Naebo Depot){BLACK}
-STR_SUFFIX_LOGO          :{SILVER}(Logo){BLACK}
-STR_SUFFIX_CAMO          :{SILVER}(Camouflage Paint){BLACK}
+STR_SUFFIX_CAMO          :{BLACK}(Camouflage Paint){BLACK}
+STR_SUFFIX_AIME          :{BLACK}(Ai-Me){BLACK}
 
 STR_SUFFIX_FOPEN	:(Open)
 STR_SUFFIX_FCOVER	:(Covered)
@@ -610,6 +614,7 @@ STR_COLOUR_GREY			    :{SILVER}Grey
 STR_COLOUR_LTGREEN			:{DKGREEN}Light Green
 STR_COLOUR_GREEN			:{GREEN}Green
 STR_COLOUR_BROWN			:{BROWN}Brown
+STR_COLOUR_DKRED			:{BROWN}Dark Red
 STR_COLOUR_BLUE				:{BLUE}Blue
 STR_COLOUR_LTBLUE			:{LTBLUE}Light Blue
 STR_COLOUR_RED				:{RED}Red
